[package]
name = "typst-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12"
slug = "0.1"
anyhow = "1"
